Create /profile and /home page

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="<NODE_MODULES_FOLDER>/react-responsive-carousel/lib/styles/carousel.min.css"/>
     <link rel="stylesheet" href="carousel.css"/>
+    <link rel="stylesheet" href="profile.css"/>
+    <link rel="stylesheet" href="home.css"/>
   </head>
 
   <body>
