--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="login.css" />
-    <link rel="stylesheet" href="signup.css" />
-    <link rel="stylesheet" href="model.css" />
-    <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/login.css" />
+    <link rel="stylesheet" href="/signup.css" />
+    <link rel="stylesheet" href="/model.css" />
+    <link rel="stylesheet" href="/custom.css" />
     <link rel="stylesheet" href="<NODE_MODULES_FOLDER>/react-responsive-carousel/lib/styles/carousel.min.css"/>
-    <link rel="stylesheet" href="carousel.css"/>
-    <link rel="stylesheet" href="profile.css"/>
-    <link rel="stylesheet" href="home.css"/>
+    <link rel="stylesheet" href="/carousel.css"/>
+    <link rel="stylesheet" href="/profile.css"/>
+    <link rel="stylesheet" href="/home.css"/>
   </head>
 
   <body>
     <div id="root"></div>
     <script src="../src/index.js" type="text/JSX"></script>
-    <script type="text/javascript" src="styles.jsx"></script>
+    <script type="text/javascript" src="/styles.jsx"></script>
   </body>
 </html>
