--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>JSX</title>
+    <title>Porsche</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +19,7 @@
 
   <body>
     <div id="root"></div>
+    
     <script src="../src/index.js" type="text/JSX"></script>
     <script type="text/javascript" src="/styles.jsx"></script>
   </body>
