--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="/signup.css" />
     <link rel="stylesheet" href="/model.css" />
     <link rel="stylesheet" href="/custom.css" />
-    <link rel="stylesheet" href="<NODE_MODULES_FOLDER>/react-responsive-carousel/lib/styles/carousel.min.css"/>
-    <link rel="stylesheet" href="/carousel.css"/>
     <link rel="stylesheet" href="/profile.css"/>
     <link rel="stylesheet" href="/home.css"/>
   </head>
@@ -21,6 +19,8 @@
     <div id="root"></div>
     
     <script src="../src/index.js" type="text/JSX"></script>
-    <script type="text/javascript" src="/styles.jsx"></script>
+    <script type="text/javascript" src="/styles.js"></script>
   </body>
 </html>
+ <!-- <link rel="stylesheet" href="/react-responsive-carousel/lib/styles/carousel.min.css"/>
+    <link rel="stylesheet" href="/carousel.css"/>-->
